microservice/templates/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: easytrip
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
