microservice/templates/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: easytrip
spec:
  type: ClusterIP
  ports:
  - port: 5672
    targetPort: 5672
  selector:
    app: rabbitmq
